; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts2/extr_fts2.c_posListUnion.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts2/extr_fts2.c_posListUnion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64 }
%struct.TYPE_9__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, %struct.TYPE_10__*, %struct.TYPE_9__*)* @posListUnion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @posListUnion(%struct.TYPE_10__* %0, %struct.TYPE_10__* %1, %struct.TYPE_9__* %2) #0 {
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %6, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %12 = call i64 @dlrDocid(%struct.TYPE_10__* %11)
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %14 = call i64 @dlrDocid(%struct.TYPE_10__* %13)
  %15 = icmp eq i64 %12, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp eq i64 %20, %23
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp eq i64 %29, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @assert(i32 %34)
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %37 = call i32 @plrInit(i32* %7, %struct.TYPE_10__* %36)
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %39 = call i32 @plrInit(i32* %8, %struct.TYPE_10__* %38)
  %40 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %42 = call i64 @dlrDocid(%struct.TYPE_10__* %41)
  %43 = call i32 @plwInit(i32* %9, %struct.TYPE_9__* %40, i64 %42)
  br label %44

44:                                               ; preds = %71, %3
  %45 = call i32 @plrAtEnd(i32* %7)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %44
  %48 = call i32 @plrAtEnd(i32* %8)
  %49 = icmp ne i32 %48, 0
  %50 = xor i1 %49, true
  br label %51

51:                                               ; preds = %47, %44
  %52 = phi i1 [ true, %44 ], [ %50, %47 ]
  br i1 %52, label %53, label %72

53:                                               ; preds = %51
  %54 = call i32 @posListCmp(i32* %7, i32* %8)
  store i32 %54, i32* %10, align 4
  %55 = load i32, i32* %10, align 4
  %56 = icmp slt i32 %55, 0
  br i1 %56, label %57, label %60

57:                                               ; preds = %53
  %58 = call i32 @plwCopy(i32* %9, i32* %7)
  %59 = call i32 @plrStep(i32* %7)
  br label %71

60:                                               ; preds = %53
  %61 = load i32, i32* %10, align 4
  %62 = icmp sgt i32 %61, 0
  br i1 %62, label %63, label %66

63:                                               ; preds = %60
  %64 = call i32 @plwCopy(i32* %9, i32* %8)
  %65 = call i32 @plrStep(i32* %8)
  br label %70

66:                                               ; preds = %60
  %67 = call i32 @plwCopy(i32* %9, i32* %7)
  %68 = call i32 @plrStep(i32* %7)
  %69 = call i32 @plrStep(i32* %8)
  br label %70

70:                                               ; preds = %66, %63
  br label %71

71:                                               ; preds = %70, %57
  br label %44

72:                                               ; preds = %51
  %73 = call i32 @plwTerminate(i32* %9)
  %74 = call i32 @plwDestroy(i32* %9)
  %75 = call i32 @plrDestroy(i32* %7)
  %76 = call i32 @plrDestroy(i32* %8)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @dlrDocid(%struct.TYPE_10__*) #1

declare dso_local i32 @plrInit(i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @plwInit(i32*, %struct.TYPE_9__*, i64) #1

declare dso_local i32 @plrAtEnd(i32*) #1

declare dso_local i32 @posListCmp(i32*, i32*) #1

declare dso_local i32 @plwCopy(i32*, i32*) #1

declare dso_local i32 @plrStep(i32*) #1

declare dso_local i32 @plwTerminate(i32*) #1

declare dso_local i32 @plwDestroy(i32*) #1

declare dso_local i32 @plrDestroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
